--- a/app/views/patients/_sidebar.html.erb
+++ b/app/views/patients/_sidebar.html.erb
@@ -11,11 +11,13 @@
   <div class="panel" id="recent">
     <div class="caption"><%= t('.recent_patients') %></div>
     <ul>
+      <% if @recent %>
       <% for patient in @recent %>
         <li>
           <dt><%= link_to truncate(patient.full_name, :length => 15), patient_accessions_path(patient), :title => patient.full_name %></dt>
           <tt><%= t('.patient') %></tt>
         </li>
+      <% end %>
       <% end %>
     </ul>
   </div>
